--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -99,9 +99,6 @@
     <ClCompile Include="Tile.cpp">
       <Filter>src\World\Tile</Filter>
     </ClCompile>
-    <ClCompile Include="Inventory.cpp">
-      <Filter>src\Gui\GuiControls</Filter>
-    </ClCompile>
     <ClCompile Include="Game_build.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
@@ -155,6 +152,9 @@
     </ClCompile>
     <ClCompile Include="Avatar.cpp">
       <Filter>src\World\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="GInventory.cpp">
+      <Filter>src\Gui\GuiControls</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -212,9 +212,6 @@
     <ClInclude Include="Tile.h">
       <Filter>src\World\Tile</Filter>
     </ClInclude>
-    <ClInclude Include="Inventory.h">
-      <Filter>src\Gui\GuiControls</Filter>
-    </ClInclude>
     <ClInclude Include="Traits.h">
       <Filter>src\World\Prototypes</Filter>
     </ClInclude>
@@ -241,6 +238,9 @@
     </ClInclude>
     <ClInclude Include="Avatar.h">
       <Filter>src\World\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="GInventory.h">
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
