--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Avatar.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Container.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Door_save.cpp" />
@@ -200,6 +201,8 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Avatar.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Container.h" />
+    <ClInclude Include="Container_events.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
