--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="Actions.h" />
     <ClInclude Include="App.h" />
     <ClInclude Include="Avatar.h" />
+    <ClInclude Include="Avatar_events.h" />
     <ClInclude Include="BuildContext.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Container.h" />
