--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -263,5 +263,8 @@
     <ClInclude Include="BuildContext.h">
       <Filter>src\World\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="Avatar_events.h">
+      <Filter>src\World\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
