--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Avatar.h" />
     <ClInclude Include="Avatar_events.h" />
+    <ClInclude Include="Behaviors.h" />
     <ClInclude Include="BuildContext.h" />
     <ClInclude Include="BuildProgressBar.h" />
     <ClInclude Include="Button.h" />
@@ -216,7 +217,7 @@
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
     <ClInclude Include="Thing.h" />
-    <ClInclude Include="Traits.h" />
+    <ClInclude Include="Layers.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Door.h" />
