--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="BehaviorModelFactory.cpp">
       <Filter>src\World\BehaviorModels</Filter>
     </ClCompile>
+    <ClCompile Include="ContainerModel.cpp">
+      <Filter>src\World\BehaviorModels</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -285,6 +288,9 @@
       <Filter>src\World\Prototypes</Filter>
     </ClInclude>
     <ClInclude Include="BehaviorModelFactory.h">
+      <Filter>src\World\BehaviorModels</Filter>
+    </ClInclude>
+    <ClInclude Include="ContainerModel.h">
       <Filter>src\World\BehaviorModels</Filter>
     </ClInclude>
   </ItemGroup>
