--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Thing.h" />
     <ClInclude Include="Layers.h" />
     <ClInclude Include="Camera.h" />
@@ -248,6 +249,12 @@
     <ProjectReference Include="..\..\LaggySdk\LaggySdk\LaggySdk.vcxproj">
       <Project>{26f606c5-4239-49f0-b3d4-c358526c2325}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SpaceExplorers.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
