--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Atmosphere.cpp" />
     <ClCompile Include="Avatar.cpp" />
     <ClCompile Include="Avatar_save.cpp" />
     <ClCompile Include="BehaviorModelBase.cpp" />
@@ -203,6 +204,7 @@
   <ItemGroup>
     <ClInclude Include="Actions.h" />
     <ClInclude Include="App.h" />
+    <ClInclude Include="Atmosphere.h" />
     <ClInclude Include="Avatar.h" />
     <ClInclude Include="Avatar_events.h" />
     <ClInclude Include="BehaviorModelFactory.h" />
@@ -215,6 +217,7 @@
     <ClInclude Include="Container_events.h" />
     <ClInclude Include="BehaviorModelBase.h" />
     <ClInclude Include="DoorModel.h" />
+    <ClInclude Include="Gases.h" />
     <ClInclude Include="Inventory_events.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Panel.h" />
