--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -58,6 +58,9 @@
     <Filter Include="rsrc">
       <UniqueIdentifier>{38363023-f7b3-4525-9664-05d11c10a713}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Atmosphere">
+      <UniqueIdentifier>{6d1b0e2c-07ce-43c9-8a80-4e9a77798309}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -179,6 +182,9 @@
     </ClCompile>
     <ClCompile Include="ContainerModel.cpp">
       <Filter>src\World\BehaviorModels</Filter>
+    </ClCompile>
+    <ClCompile Include="Atmosphere.cpp">
+      <Filter>src\Atmosphere</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -304,6 +310,12 @@
     </ClInclude>
     <ClInclude Include="WalkModes.h">
       <Filter>src\World\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Atmosphere.h">
+      <Filter>src\Atmosphere</Filter>
+    </ClInclude>
+    <ClInclude Include="Gases.h">
+      <Filter>src\Atmosphere</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
