--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -220,6 +220,7 @@
     <ClInclude Include="Gases.h" />
     <ClInclude Include="Inventory_events.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="OverlayOptions.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
     <ClInclude Include="resource.h" />
