--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Object_save.cpp" />
     <ClCompile Include="Panel.cpp" />
+    <ClCompile Include="PowerSource.cpp" />
     <ClCompile Include="PrototypesCollection.cpp" />
     <ClCompile Include="SettingsProvider.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -231,6 +232,7 @@
     <ClInclude Include="OverlayOptions.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
+    <ClInclude Include="PowerSource.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Thing.h" />
     <ClInclude Include="Layers.h" />
