--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -189,11 +189,11 @@
     <ClCompile Include="Tile_atmosphere.cpp">
       <Filter>src\World\Tile</Filter>
     </ClCompile>
-    <ClCompile Include="PowerSource.cpp">
-      <Filter>src\World\BehaviorModels</Filter>
-    </ClCompile>
     <ClCompile Include="Game_debug.cpp">
       <Filter>src\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="PowerSourceModel.cpp">
+      <Filter>src\World\BehaviorModels</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -329,7 +329,7 @@
     <ClInclude Include="OverlayOptions.h">
       <Filter>src\Game</Filter>
     </ClInclude>
-    <ClInclude Include="PowerSource.h">
+    <ClInclude Include="PowerSourceModel.h">
       <Filter>src\World\BehaviorModels</Filter>
     </ClInclude>
   </ItemGroup>
