(+) Added 'PowerLoad' behavior model

--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Object_save.cpp" />
     <ClCompile Include="Panel.cpp" />
+    <ClCompile Include="PowerLoadModel.cpp" />
     <ClCompile Include="PowerSourceModel.cpp" />
     <ClCompile Include="PrototypesCollection.cpp" />
     <ClCompile Include="SettingsProvider.cpp" />
@@ -232,6 +233,7 @@
     <ClInclude Include="OverlayOptions.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="ObjectsReader.h" />
+    <ClInclude Include="PowerLoadModel.h" />
     <ClInclude Include="PowerSourceModel.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Thing.h" />
